syntax = "proto3";

package ProtoCS;

message MsgTemplate
{
	bool b							=1;
	string str 						=2;
	float f							=3;
	double d						=4;
	bytes bytes						=5;
		
	int32 i_32 						=11;
	uint32 u_i_32 					=12;
						
	int64 i_64 						=14;
	uint64 u_i_64 					=15;
	
	repeated string strlist			=31;
	map<string, int32> stringmap	=32;
	
	EnumTemplate enumField 			= 33;
}

enum EnumTemplate
{
	AAA = 0;	//Proto3枚举必须有一个0值，0值是第一个元素以便和Proto2兼容
	BBB = 1;
	CCC = 2;
}